--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,17 @@ is_debug: true
 listen:
   type: port
   port: 1234
-storage:
+postgres:
   host: localhost
   port: 5432
   database: postgres
   username: postgres
   password: postgres
+mongodb:
+  host: localhost
+  port: 27017
+  database: user-service
+  auth_db:
+  username:
+  password:
+  collection: users
